# web-chat-rust

./: .env  Cargo.toml  README.md
src/: database.rs  main.rs  ws-server.rs
static/: file_not_found.html
static/css/: style.css
static/js/: main.js
templates/: index.html
