[package]
name = "web-chat-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = { version = "0.6.6", features = ["headers"] }
axum-extra = { version = "0.5.0", features = ["spa", "cookie-signed", "cookie"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.25.0", features = ["full"] }
rand = "0.8.5"
rusqlite = "0.28.0"
chrono = "0.4.23"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tower-cookies = "0.9.0"
parity-ws = "0.11.1"

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "ws-server"
path = "src/ws-server.rs"